--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.25.1",
+    "wavesurfer.js": "^7.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
